Fix formatting in readme_template.jinja by removing unnecessary line break

--- a/readme_generator/readme_template.jinja
+++ b/readme_generator/readme_template.jinja
@@ -6,5 +6,4 @@ BeLux Engineering Experience is a platform that provides a comprehensive set of 
 ## All repositories
 | Repository Title | Repository URL | Main Contributor |
 |------------------|----------------|-------------------|{% for repo in repos %}
-| {{ repo.title }} | [{{ repo.url }}]({{ repo.url }}) | {{ repo.main_contributor }} |
-{% endfor %}
+| {{ repo.title }} | [{{ repo.url }}]({{ repo.url }}) | {{ repo.main_contributor }} |{% endfor %}
