--- a/readme_generator/readme_template.jinja
+++ b/readme_generator/readme_template.jinja
@@ -3,6 +3,18 @@ One platform for all your architure and engineering needs.
 
 BeLux Engineering Experience is a platform that provides a comprehensive set of resources for architects and engineers. 
 
+{% set possible_solution_areas = ['application-innovation', 'infrastructure', 'security', 'data-ai' ] %}
+
+{% for solution_area_id, solution_area_display_name in solution_area_mapping.items() %}
+{% set solaRepos = repos | selectattr(solution_area_id) | list %}
+## {{ solution_area_display_name }} repositories
+| Repository Title | Repository URL | Other related areas |
+|------------------|----------------|--------------------|{% for repo in solaRepos %}
+| {{ repo.title }} | [{{ repo.url }}]({{ repo.url }}) | {% for sola in possible_solution_areas %}{% if repo[sola] and sola != solution_area_id %}`{{ solution_area_mapping[sola] }}` {% endif %}{% endfor %} |{% endfor %}
+{% endfor %}
+
+
+----
 ## All repositories
 | Repository Title | Repository URL | Main Contributor |
 |------------------|----------------|-------------------|{% for repo in repos %}
