Fix onboarding label case sensitivity and update README template to include contribution guidelines and last updated timestamp

--- a/readme_generator/readme_template.jinja
+++ b/readme_generator/readme_template.jinja
@@ -19,3 +19,8 @@ BeLux Engineering Experience is a platform that provides a comprehensive set of 
 | Repository Title | Repository URL | Main Contributor |
 |------------------|----------------|-------------------|{% for repo in repos %}
 | {{ repo.title }} | [{{ repo.url }}]({{ repo.url }}) | {{ repo.main_contributor }} |{% endfor %}
+
+## Contributing
+We welcome contributions to the BeLux Engineering Experience. If you have a repository you would like to reference here, please, open an issue using the `🧑‍💻 Onboard my repository` template.
+
+**Last updated**: {{ last_geneated }}
