added activity dashboard section in jinja file

--- a/readme_generator/readme_template.jinja
+++ b/readme_generator/readme_template.jinja
@@ -13,6 +13,9 @@ BeLux Engineering Experience is a platform that provides a comprehensive set of 
 | {{ repo.title }} | [{{ repo.url }}]({{ repo.url }}) | {{ repo.description }} | {% endfor %}
 {% endfor %}
 
+----
+
+## Activity dashboard
 
 ----
 ## All repositories
