--- a/activity-dashboard/readme_template_dashboard.jinja
+++ b/activity-dashboard/readme_template_dashboard.jinja
@@ -1,3 +1,9 @@
+<p align="center">
+  <span style="display: inline-block; width: 30%; border-top: 2px solid #1bbfed; vertical-align: middle;"></span>
+  <img src="../logo/belengexplogo.png" alt="Innersource Logo" style="width:20%; vertical-align: middle; margin: 0 10px;" />
+  <span style="display: inline-block; width: 30%; border-top: 2px solid #1bbfed; vertical-align: middle;"></span>
+</p> 
+
 # 📊 Contributor Leaderboard (Updated Daily)
 
 Below is a summary of the total commits for each contributor 🚀
