--- a/activity-dashboard/readme_template_dashboard.jinja
+++ b/activity-dashboard/readme_template_dashboard.jinja
@@ -22,4 +22,4 @@ Below is a summary of the total commits for each contributor 🚀
 
 ----
 
-<sub>Generated on {{ generated_on }}</sub>
+**Last updated**: {{ generated_on }}
