changed jinja template

--- a/readme_generator/readme_template.jinja
+++ b/readme_generator/readme_template.jinja
@@ -4,7 +4,7 @@
   <span style="display: inline-block; width: 30%; border-top: 2px solid #1bbfed; vertical-align: middle;"></span>
 </p> 
 
-# BeLux Engineering Experience.
+# BeLux Engineering Experience
 One platform for all your architure and engineering needs. 
 
 BeLux Engineering Experience is a platform that provides a comprehensive set of resources for architects and engineers. 
