--- a/readme_generator/readme_template.jinja
+++ b/readme_generator/readme_template.jinja
@@ -21,10 +21,7 @@ BeLux Engineering Experience is a platform that provides a comprehensive set of 
 
 ----
 
-## Activity dashboard
-
-----
 ## Contributing
-We welcome contributions to the BeLux Engineering Experience. If you have a repository you would like to reference here, please, open an issue using the `🧑‍💻 Onboard my repository` template.
+We welcome contributions to the BeLux Engineering Experience. If you have a repository you would like to reference here, please, [![Submit your repo here](https://img.shields.io/badge/Submit%20your%20repo%20here📂-<-blue)](https://github.com/BeLux-Engineering-Experience/home/issues/new?template=onboard_repo.yml)!
 
 **Last updated**: {{ last_generated }}
