--- a/readme_generator/readme_template.jinja
+++ b/readme_generator/readme_template.jinja
@@ -22,6 +22,8 @@ BeLux Engineering Experience is a platform that provides a comprehensive set of 
 ----
 
 ## Contributing
-We welcome contributions to the BeLux Engineering Experience. If you have a repository you would like to reference here, please, [![Submit your repo here](https://img.shields.io/badge/Submit%20your%20repo%20here📂-<-blue)](https://github.com/BeLux-Engineering-Experience/home/issues/new?template=onboard_repo.yml)!
+We welcome contributions to the BeLux Engineering Experience. If you have a repository you would like to reference here, please open an issue using the `🧑‍💻 Onboard my repository` template.
+
+If you are new to Git, GitHub, or VS Code, we have a step-by-step tutorial to help you get started. See [contributing_beginners.md](contributing_beginners.md) for detailed instructions.
 
 **Last updated**: {{ last_generated }}
