--- a/readme_generator/readme_template.jinja
+++ b/readme_generator/readme_template.jinja
@@ -22,7 +22,7 @@ BeLux Engineering Experience is a platform that provides a comprehensive set of 
 ----
 
 ## Contributing
-We welcome contributions to the BeLux Engineering Experience. If you have a repository you would like to reference here, please open an issue using the `🧑‍💻 Onboard my repository` template.
+We welcome contributions to the BeLux Engineering Experience. If you have a repository you would like to reference here, please submit your repository [here](https://github.com/BeLux-Engineering-Experience/home/issues/new?template=onboard_repo.yml).
 
 If you are new to Git, GitHub, or VS Code, we have a step-by-step tutorial to help you get started. See [the getting started guide](./.github/CONTRIBUTING_beginner.md) for detailed instructions.
 
